# wavemind

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements-optional.txt  requirements.txt  wavemind_v2.py
.github/: labels.yml  release.yml
benchmarks/: ACTIVE_ACTIVE_ADMISSION.md  AGENT_IMPACT.md  BENCHMARK_LEADERBOARD.md  BENCHMARK_REPORT.md  CLUSTER_ADMISSION.md  CLUSTER_AUTOSCALE.md  COST_EFFICIENCY.md  MEMORY_OS_ADMISSION.md  MEMORY_OS_CANARY.md  MEMORY_OS_INTELLIGENCE.md  MEMORY_OS_POLICY_BUNDLE.md  MEMORY_OS_POLICY_EVOLUTION.md  MEMORY_OS_QUALITY.md  MEMORY_OS_REMOTE_SOAK_HANDOFF.md  MEMORY_OS_REMOTE_WORKER_SOAK.md  MEMORY_OS_RUNTIME_SOAK.md  MULTIMODAL_ADMISSION.md  PRODUCTION_ADMISSION.md  PRODUCTION_EVIDENCE.md  PRODUCTION_EVIDENCE_BUNDLE.md  PRODUCTION_EVIDENCE_DISPATCH.md  PRODUCTION_EVIDENCE_ENV.md  PRODUCTION_EVIDENCE_PREFLIGHT.md  PRODUCTION_READINESS.md  RELEASE_CLAIMS.md  SCALE_GAP.md  SERVERLESS_ADMISSION.md  STRICT_EVIDENCE_READINESS.md  STRUCTURED_MEMORY.md  active_active_admission_results.json  agent_coherence_benchmark.py  agent_coherence_results.json  agent_impact_leaderboard.py  agent_impact_results.json  agent_memory_benchmark.py  agent_memory_results.json  ann_index_curve_benchmark.py  ann_index_curve_results.json  benchmark_artifact_audit.json  benchmark_matrix_results.json  (+216 more)
docs/: BENCHMARK_BRIEF.md  CHROMA_MIGRATION.md  CRYPTO_MARKET_DIRECTION_2026_2027.md  CRYPTO_RESEARCH.md  DEMO_SCRIPT.md  LAUNCH_KIT.md  OBSERVABILITY.md  PROJECT_BOARD.md  RELEASE.md  ROADMAP.md  RU_LAUNCH_POSTS.md  USE_CASES.md  benchmark-dashboard.html
examples/: agent_with_memory.py  chroma_migration.py  customer_support_memory.py  demo.py  dynamic_memory_demo.py  framework_integrations.py  freqtrade_wavemind_strategy.py  langchain_memory.py  llamaindex_retriever.py  research_notebook_memory.py  sharded_memory.py
scripts/: prune_ghcr_versions.py
tests/: conftest.py  test_active_active_admission.py  test_active_active_drill.py  test_agent_coherence_benchmark.py  test_agent_impact_leaderboard.py  test_agent_memory_benchmark.py  test_ann_index_curve_benchmark.py  test_api.py  test_api_process_persistence.py  test_architecture_advisor.py  test_benchmark_artifact_audit.py  test_benchmark_brief.py  test_benchmark_charts.py  test_benchmark_dashboard.py  test_benchmark_leaderboard.py  test_benchmark_registry.py  test_benchmark_report.py  test_benchmark_workflow.py  test_chroma_migration_example.py  test_cli_smoke.py  test_cloud_run_evidence.py  test_cluster.py  test_cluster_admission.py  test_cluster_autoscale_report.py  test_cluster_drill.py  test_consensus.py  test_core_persistence.py  test_cost_efficiency_leaderboard.py  test_crypto_accuracy_gate.py  test_crypto_binance_archive.py  test_crypto_confidence_calibration.py  test_crypto_current_forecast.py  test_crypto_derivatives.py  test_crypto_derivatives_field_benchmark.py  test_crypto_forecast_audit.py  test_crypto_multiyear_event_benchmark.py  test_crypto_ohlcv.py  test_crypto_pattern_benchmark.py  test_crypto_price_target_benchmark.py  test_crypto_relationship_miner.py  (+88 more)
wavemind/: __init__.py  active_active_drill.py  advisor.py  api.py  benchmark.py  cli.py  cloud_run_evidence.py  cluster.py  cluster_drill.py  consensus.py  core.py  encoders.py  field_crdt.py  field_graph.py  importers.py  indexes.py  jobs.py  k8s_operator.py  memory_os_admission.py  memory_os_canary.py  memory_os_evolution.py  memory_os_policy_bundle.py  multimodal.py  multimodal_admission.py  scale.py  (+14 more)
(+134 files in other folders)
