[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wavemind"
version = "2.0.0"
description = "Persistent dynamic memory engine with vector search and wave-field re-ranking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "pypdf>=4",
]

[project.optional-dependencies]
sentence = [
  "sentence-transformers>=3",
]
ml = [
  "sentence-transformers>=3",
]
indexes = [
  "annoy>=1.17",
  "faiss-cpu>=1.8; platform_system != 'Windows'",
]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[project.scripts]
wavemind = "wavemind.cli:main"

[project.urls]
Homepage = "https://github.com/wavemind/wavemind"
Repository = "https://github.com/wavemind/wavemind"

[tool.setuptools.packages.find]
where = ["."]
include = ["wavemind*"]
