[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wavemind"
version = "2.0.5"
description = "Persistent dynamic memory engine with vector search and wave-field re-ranking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "pypdf>=4",
]

[project.optional-dependencies]
sentence = [
  "sentence-transformers>=3",
]
ml = [
  "sentence-transformers>=3",
]
indexes = [
  "annoy>=1.17",
  "faiss-cpu>=1.8; platform_system != 'Windows'",
]
bench = [
  "chromadb>=1.0",
  "qdrant-client>=1.9",
]
langchain = [
  "langchain-classic>=1.0",
]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "langchain-classic>=1.0",
]

[project.scripts]
wavemind = "wavemind.cli:main"

[project.urls]
Homepage = "https://github.com/CaspianG/wavemind"
Repository = "https://github.com/CaspianG/wavemind"

[tool.setuptools.packages.find]
where = ["."]
include = ["wavemind*"]
