[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wavemind"
version = "2.2.6"
description = "Local-first dynamic memory field with vector search and wave-field re-ranking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "pypdf>=4",
]

[project.optional-dependencies]
sentence = [
  "sentence-transformers>=3",
]
ml = [
  "sentence-transformers>=3",
]
indexes = [
  "annoy>=1.17",
  "faiss-cpu>=1.8; platform_system != 'Windows'",
  "qdrant-client>=1.9",
]
postgres = [
  "psycopg[binary]>=3.1",
]
redis = [
  "redis>=5.0",
]
otel = [
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
]
bench = [
  "chromadb>=1.0",
  "qdrant-client>=1.9",
]
langchain = [
  "langchain-classic>=1.0",
]
production = [
  "annoy>=1.17",
  "faiss-cpu>=1.8; platform_system != 'Windows'",
  "qdrant-client>=1.9",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "langchain-classic>=1.0",
]

[project.scripts]
wavemind = "wavemind.cli:main"

[project.urls]
Homepage = "https://github.com/CaspianG/wavemind"
Repository = "https://github.com/CaspianG/wavemind"

[tool.setuptools.packages.find]
where = ["."]
include = ["wavemind*"]
